Adding stylesheet links to contact page and change some styles on stylesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,14 @@
+h1 {
+  color: #66BFBF;
+}
+h2 {
+  color: #66BFBF;
+}
+h3 {
+  color: #66BFBF;
+}
 body {
-  background-color: #E7F6F2;
+  background-color: #EAF6F6;
 }
 
 hr {
